se deja la base del proyecto funcional, con un crud de ejemplo

--- a/src/main/resources/co/gov/secretariamovilidad/sicapital/aplicacion.properties
+++ b/src/main/resources/co/gov/secretariamovilidad/sicapital/aplicacion.properties
@@ -2,4 +2,5 @@
 # Mensajes de Excepcion
 # **************************************************************************************************
 msg.error.sistema = La operaci\u00f3n ha fallado. Si el problema persiste, consulte con el Administrador del sistema.
-msg.error.baseDatos = No se pudo realizar la operaci\u00f3n, por favor intente nuevamente. Si el problema persiste por favor comun\u00edquese con el administrador del sistema
+msg.error.baseDatos = No se pudo realizar la operaci\u00f3n, por favor intente nuevamente. Si el problema persiste por favor comun\u00edquese con el administrador del sistema.
+msg.ok.sistema = Sistema ok
