Adicion de nuevas propiedades del formulario de estudios previos

--- a/src/main/resources/co/gov/secretariamovilidad/sicapital/estudiosprevios.properties
+++ b/src/main/resources/co/gov/secretariamovilidad/sicapital/estudiosprevios.properties
@@ -26,13 +26,21 @@ estprev_renglon = L\u00ednea o rengl\u00f3n
 estprev_firmas = Director Firmas (Adicional)
 estprev_ordenador = Ordenador del gasto
 estprev_replicar =Replicar firmas
+estprev_detallesfuncionario =Detalles del funcionario
+estprev_funcionario =Funcionario
+estprev_companiafuncionario =Compa\u00f1\u00eda
+estprev_cargofuncionario =Cargo
+estprev_detallesordenador =Detalles del ordenador del gasto
+estprev_ordenadorgasto =Ordenador del gasto
+estprev_companiaordenador =Compa\u00f1\u00eda
+estprev_cargoordenador =Cargo
 
 /* Pesta\u00f1a Conveniencia*/
 estprev_conveniencia = An\u00e1lisis sobre la conveniencia de realizar la contrataci\u00f2n
 estprev_continuacion = Continuaci\u00f3n
 
 /* Pesta\u00f1a Objeto*/
-estprev_alcance = Alcance del objeto
+estprev_alcance = Especificaciones del servicio
 estprev_bienes = Detalle Bienes y Servicios
 estprev_especificacion = Especificaci\u00f3n t\u00e9cnica
 estprev_otrosaspectos = Otros aspectos del objeto contractual
