Modificación  de las propiedades de proceso de estudios previos y login

--- a/src/main/resources/co/gov/secretariamovilidad/sicapital/estudiosprevios.properties
+++ b/src/main/resources/co/gov/secretariamovilidad/sicapital/estudiosprevios.properties
@@ -36,8 +36,14 @@ estprev_companiaordenador =Compa\u00f1\u00eda
 estprev_cargoordenador =Cargo
 
 /* Pesta\u00f1a Conveniencia*/
-estprev_conveniencia = An\u00e1lisis sobre la conveniencia de realizar la contrataci\u00f2n
+estprev_conveniencia = Justificaci\u00f3n
 estprev_continuacion = Continuaci\u00f3n
+estprev_tipobien = Tipo de Bien
+estprev_elemento = Elemento
+estprev_unidadmedida = Unidad de medida
+estprev_mvu = MVU
+estprev_cantidadaprobada = Cantidad Aprobada
+estprev_valorunitario = Valor unitario
 
 /* Pesta\u00f1a Objeto*/
 estprev_alcance = Especificaciones del servicio
@@ -91,8 +97,7 @@ estprev_nuevo= Nuevo
 estprev_consultar = Consultar
 
 
-
-
+adicionarbien = Adicionar Bien
 
 
 
