--- a/src/main/resources/co/gov/secretariamovilidad/sicapital/login.properties
+++ b/src/main/resources/co/gov/secretariamovilidad/sicapital/login.properties
@@ -4,7 +4,8 @@
 login= Usuario 
 password= Contrase\u00f1a
 ingresar = Ingresar
-database = Base de datos
+databasetext = Base de datos
+database = sicapitalprueba
 
 
 
