se avanza con vista de elaboracion contratos

--- a/src/main/resources/co/gov/secretariamovilidad/sicapital/minutaContrato.properties
+++ b/src/main/resources/co/gov/secretariamovilidad/sicapital/minutaContrato.properties
@@ -5,6 +5,7 @@
 # BOTONES
 general_boton_validar=Validar
 general_boton_imprimir=Imprimir
+general_boton_elaboracion_contrato=Elaboracion contrato
 #LABELS
 general_titulo_minuta_contrato=MINUTA CONTRATO
 general_label_numero_sisco=N\u00famero sisco
@@ -56,7 +57,14 @@ general_label_Aprobo=Aprobo
 general_label_integrantes_consorcio_u_temporal=Integrantes de consorcio y union temporal
 general_label_integrantes_identificacion=Identificacion
 general_label_integrantes_dv=DV
-general_label_integrantes_porcentaje_parti=% participacion
+general_label_integrantes_porcentaje_parti=% 
+general_label_datos_economicos=Datos economicos
+general_label_regimen_retefuente=Regimen Retefuente
+general_label_regimen_iva=Regimen Iva
+general_label_banco=Banco
+general_label_numero_cuenta=Numero de cuenta
+general_label_tipo_cuenta=Tipo Cuenta
+
 
 #FIEDSET
 general_tab_proveedor=Proveedor
